# mqtt-mcp-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
_bmad/: config.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/automator/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
project-docs/: project-context.md
project-docs/implementation-artifacts/: 1-1-environment-configuration-loading-and-validation.md  1-1-review-acceptance-auditor.md  1-1-review-blind-hunter.md  1-1-review-edge-case-hunter.md  deferred-work.md  sprint-status.yaml  story-dependency-order.md  story-execution-dependency-graph.md
project-docs/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-06-07.md
project-docs/planning-artifacts/briefs/brief-mqtt-mcp-server-2026-06-06/: brief.md
project-docs/planning-artifacts/prds/prd-mqtt-mcp-server-2026-06-06/: prd.md
project-docs/planning-artifacts/prds/prd-mqtt-mcp-server-2026-06-07/: .decision-log.md  prd.md  reconcile-clock-server.md  reconcile-project-context.md  review-rubric.md
src/mqtt_mcp/: __init__.py  __main__.py  auth.py  logging.py  server.py
src/mqtt_mcp/adapters/: __init__.py  mqtt_adapter.py
src/mqtt_mcp/config/: __init__.py  defaults.py  loader.py  models.py  validation.py
src/mqtt_mcp/domain/: __init__.py  exceptions.py  models.py  safety.py
src/mqtt_mcp/schemas/: __init__.py  responses.py
src/mqtt_mcp/services/: clock_service.py
src/mqtt_mcp/tools/: __init__.py  commands.py  permissions.py  setup_support.py
tests/: conftest.py
tests/unit/: test_auth.py
tests/unit/adapters/: test_mqtt_adapter.py
tests/unit/config/: test_loader.py  test_models.py  test_validation.py
tests/unit/domain/: test_models.py  test_safety.py
tests/unit/services/: test_clock_service.py
tests/unit/tools/: test_commands.py  test_setup_support.py
