[project]
name = "mqtt-mcp"
version = "0.1.0"
description = "MCP server for smart clock devices"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "paho-mqtt>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
mqtt-mcp = "mqtt_mcp:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pip-audit>=2.8.0",
    "pygments>=2.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["mqtt_mcp"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "mqtt_mcp.services.*",
    "mqtt_mcp.tools.*",
]
disable_error_code = ["attr-defined", "arg-type", "operator"]

[tool.coverage.run]
source = ["src/mqtt_mcp"]
omit = ["*/__main__.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
